change security schema
